modificação no texto do button

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <h2>It's not just Coffee</h2>
     <h2>It's Starbucks</h2>
     <p>Desperte seus sentidos com o melhor café da cidade. Do grão à xícara, selecionamos apenas o melhor para você. Ambiente aconchegante, café premium e atendimento que faz você se sentir em casa. Seu momento especial começa aqui.</p>
-    <button>Deixe seu like</button>
+    <button>Explore seu paladar</button>
 </div>
     
 <div>
