acrescentei uma div

--- a/index.html
+++ b/index.html
@@ -7,24 +7,30 @@
     <link rel="stylesheet" href="./style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@200;300;400;500;900&display=swap"
+        rel="stylesheet">
     <title>Starbucks</title>
 </head>
 
 <body>
-    <img src="./assets/logo.png" class="logo" alt="logo da starbucks">
 
-    <div>
-        <h2>It's not just Coffee</h2>
-        <h2>It's <span>Starbucks</span></h2>
-        <p>Desperte seus sentidos com o melhor café da cidade. Do grão à xícara, selecionamos apenas o melhor para você.
-            Ambiente aconchegante, café premium e atendimento que faz você se sentir em casa. Seu momento especial
-            começa aqui.</p>
-        <button>Explore seu paladar</button>
-    </div>
+    <div class="conteudo">
+        
+        <img src="./assets/logo.png" class="logo" alt="logo da starbucks">
 
-    <div>
-        <img src="./assets/img1.png" class="starbucks" alt="imagem-milkshake-coffee">
+        <div>
+            <h2>It's not just Coffee</h2>
+            <h2>It's <span>Starbucks</span></h2>
+            <p>Desperte seus sentidos com o melhor café da cidade. Do grão à xícara, selecionamos apenas o melhor para
+                você.
+                Ambiente aconchegante, café premium e atendimento que faz você se sentir em casa. Seu momento especial
+                começa aqui.</p>
+            <button>Deguste</button>
+        </div>
+
+        <div>
+            <img src="./assets/img1.png" class="starbucks" alt="imagem-milkshake-coffee">
+        </div>
     </div>
 
     <div>
