--- a/index.html
+++ b/index.html
@@ -14,36 +14,42 @@
 
 <body>
 
-    <div class="circulo"></div>
-    
-    <img src="./assets/logo.png" class="logo" alt="logo da starbucks">
+    <div class="container">
+        <div class="circle"></div>
 
-    <div class="conteudo">
+        <img src="./assets/logo.png" class="logo" alt="logo da starbucks">
 
-        <div class="box-text">
-            <h2>It's not just Coffee</h2>
-            <h2>It's <span>Starbucks</span></h2>
-            <p>Desperte seus sentidos com o melhor café da cidade. Do grão à xícara, selecionamos apenas o melhor para
-                você.
-                Ambiente aconchegante, café premium e atendimento que faz você se sentir em casa. Seu momento especial
-                começa aqui.</p>
-            <button>Deguste outros sabores</button>
+        <div class="conteudo">
+
+            <div class="box-text">
+                <h2>It's not just Coffee</h2>
+                <h2>It's <span>Starbucks</span></h2>
+                <p>Desperte seus sentidos com o melhor café da cidade. Do grão à xícara, selecionamos apenas o melhor
+                    para
+                    você.
+                    Ambiente aconchegante, café premium e atendimento que faz você se sentir em casa. Seu momento
+                    especial
+                    começa aqui.</p>
+                <button>Deguste outros sabores</button>
+            </div>
+
+            <div class="box-image">
+                <img src="./assets/img1.png" class="starbucks" alt="imagem-milkshake-coffee">
+            </div>
+
         </div>
 
-        <div class="box-image">
-            <img src="./assets/img1.png" class="starbucks" alt="imagem-milkshake-coffee">
+        <div class="menu">
+            <img src="./assets/thumb1.png" class="botao-menu">
+            <img src="./assets/thumb2.png" class="botao-menu">
+            <img src="./assets/thumb3.png" class="botao-menu">
         </div>
     </div>
-
-    <div class="menu">
-        <img src="./assets/thumb1.png" class="botao-menu">
-        <img src="./assets/thumb2.png" class="botao-menu">
-        <img src="./assets/thumb3.png" class="botao-menu">
-
-    </div>
-
-
 
 </body>
+
+<script>
+    console.log("testando aula")
+</script>
 
 </html>
