--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
                     Ambiente aconchegante, café premium e atendimento que faz você se sentir em casa. Seu momento
                     especial
                     começa aqui.</p>
-                <button>Deguste outros sabores</button>
+                <button>Mais sabores</button>
             </div>
 
             <div class="box-image">
@@ -40,16 +40,14 @@
         </div>
 
         <div class="menu">
-            <img src="./assets/thumb1.png" class="botao-menu">
-            <img src="./assets/thumb2.png" class="botao-menu">
-            <img src="./assets/thumb3.png" class="botao-menu">
+            <img src="./assets/thumb1.png" class="botao-menu" onclick="trocaImagem('./assets/img1.png'); trocaCor('#017143')"> 
+            <img src="./assets/thumb2.png" class="botao-menu" onclick="trocaImagem('./assets/img2.png'); trocaCor('#eb7495')">
+            <img src="./assets/thumb3.png" class="botao-menu" onclick="trocaImagem('./assets/img3.png'); trocaCor('#d752b1')">
         </div>
     </div>
 
 </body>
 
-<script>
-    console.log("testando aula")
-</script>
+<script src="./script.js"></script>
 
 </html>
